@@ -16,11 +16,6 @@ MOD      =  nsopenssl.so
 OBJS     =  nsopenssl.o config.o init.o ssl.o thread.o tclcmds.o
 HDRS     =  nsopenssl.h tclcmds.h config.h thread.h
 
-# Client certificate verification (experimental)
-#ifdef VERIFY_CLIENT
-#    CFLAGS += -DVERIFY_CLIENT -DTCL
-#endif
-
 ifdef BSAFE
 MODLIBS  =  -L$(OPENSSL)/lib -L$(BSAFE)/lib -lssl -lcrypto \
 	-lBSAFEglue -lcrypto -lbsafe -lBSAFEglue
