@@ -1,5 +1,7 @@
 2001-06-12  Scott S. Goodwin  <scott@scottg.net>
 
+	* Makefile: removed old CLIENTVERIFY test preprocessor stuff.
+
 	* all: changed #ifdef AS3 to #ifndef NS_MAJOR_VERSION. This means
 	it now compiles for AOLserver 3.x by default, since
 	NS_MAJOR_VERSION doesn't even exist in 4.x yet.
